flux-clusters/dev-cluster/flux-system/ejobasu-web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx-app
  name: web-app
  namespace: wave2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - image: nginx:alpine
        name: webcont
        resources:
          requests:
            cpu: "200m"
